[metadata]
name = depict
author = Damian Quiroga
author-email = qdamian@gmail.com
summary = Create representations of a python program
description-file = README.md
license = GPL-v3
classifier =
    Development Status :: 1 - Planning
        Environment :: Console
        Intended Audience :: Developers
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: 2.7
keywords =
    setup
    distutils
[files]
packages =
    python/depict
[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
